chore: enforce Java 11 compiler release